--- a/Project.toml
+++ b/Project.toml
@@ -1,5 +1,5 @@
 name = "Slugify"
-uuid = "6a57dadc-0402-4d39-bf46-19b28e03609d1"
+uuid = "6a57dadc-0402-4d39-bf46-19b28e03609d"
 authors = ["Chayan Datta"]
 version = "1.0.3"
 
